            - fixed displaying/using wrong host template
          - Reports
            - support outages pages for multiple host/service reports
            - fill in defaults for host/service unavailable states when switching report templates
            - fixed pnp graphs in reports when using remote instances and services containing spaces
          - Config Tool
            - fixed parsing lists in host/serviceescalations
          - Bug Fixes
            - fixed init script which did not stop/restart are fcgi processes

1.80-3   Sat Dec  7 18:26:15 CET 2013
          - optional guest account when using cookie authentication
          - made report_max_objects configurable
          - Bug Fixes
            - fixed sorting on keys with space in performance data table
            - fixed using negative numbers in performance data table
            - fixed cookie auth on https url when using https backend over proxy
            - fixed js error on reports page
            - fixed js error on panorama dashboad: Cannot call method 'getSize' of undefined

1.80-2   Thu Nov 28 12:21:18 CET 2013
          - Reports
            - made number of latest/worst outages pages configurable
          - Business Process
            - fixed context menu issues with IE
            - fixed zooming in IE
          - Bug Fixes
            - fixed show raw data link in IE

1.80     Mon Nov 25 15:03:55 CET 2013
          - support csv output in availability reports for every reporttype and not only all hosts/services
          - support US date format in url querys
          - added performance data overview (kudos to adagios for the inspiration)
          - support ranges in performance data bar (awiddersheim)
          - added xls export for availability reports
          - show human readable performance data on extinfo page
          - support standard macros in 'show_custom_vars' (awiddersheim)
          - Panorama
            - added experimental IE support
          - Reports